--- a/application/index/view/contract/all.html
+++ b/application/index/view/contract/all.html
@@ -201,6 +201,32 @@
         }
         form.on('select(name)', changeFn);
         form.on('select(contract_sn)', changeFn);
+        // 监听category select
+        var category = null;
+        form.on('select(category)', function (data) {
+            // console.log(data.value);
+            // console.log(data.elem);
+            category = $(data.elem);
+            $.get({
+                url: '/type/getByCategoryId/' + data.value,
+                success: function (result) {
+                    if (result == -1) {
+                        layer.msg('非法操作');
+                    } else {
+                        var options = '<option value></option>';
+                        for (var i in result) {
+                            options += '<option value="' + result[i]['id'] + '" data-sn="' + result[i]['sn'] + '">' + result[i]['name'] + '</option>'
+                        }
+                        console.log(options);
+                        $('select[name="type[id]"]').empty().append(options);
+                        form.render('select');
+                    }
+                },
+                fail: function (error) {
+                    console.log(error);
+                }
+            });
+        });
 
         // filter submit
         form.on('submit(search)', function (data) {
@@ -264,6 +290,12 @@
                 , {field: 'name', title: '合同标题', sort: true}
                 , {field: 'type', title: '合同类型', templet: '<div>{{d.type.name}}</div>', sort: true}
                 , {field: 'manager', title: '负责人', sort: true}
+                , {
+                    field: 'due_date',
+                    title: '签约日',
+                    templet: '<div>{{new Date(d.contract_date * 1000).toLocaleDateString()}}</div>',
+                    sort: true
+                }
                 , {
                     field: 'due_date',
                     title: '到期日',
