--- a/application/index/view/user/all.html
+++ b/application/index/view/user/all.html
@@ -33,6 +33,7 @@ layui.use(['form', 'table'], function () {
         ,height: 'full-220'
         ,data: {$users}
         ,page: true //开启分页
+        ,limit: 15
         ,cols: [[ //表头
             {checkbox: true},
             {field: 'id', title: 'ID', width: 100, sort: true}
