--- a/application/index/view/user/edit.html
+++ b/application/index/view/user/edit.html
@@ -6,7 +6,7 @@
             <label class="layui-form-label">用户名</label>
             <div class="layui-input-block">
                 <input value="{$user.username}" type="text" name="username" required lay-verify="required" placeholder="用户名" autocomplete="off"
-                       class="layui-input">
+                       class="layui-input" disabled>
             </div>
         </div>
         <div class="layui-form-item">
