--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -156,7 +156,7 @@
             url: '/contract/expiring',
             success: function (result) {
                 console.log(result.length);
-                if (result.length > 1) {
+                if (result.length > 0) {
                     var content = '';
                     // content += '<div class="layui-fluid">';
                     for (var i = 0; i < result.length; i++) {
@@ -185,6 +185,10 @@
                     });
                 }
             }
+        });
+
+        $('.contract-item').click(function () {
+            openContract($(this).data('id'));
         });
 
         $('.approval-item').click(function () {
