--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -275,7 +275,7 @@
                 type: 2,
                 title: '<span class="icon icon-flow"></span>  审批详情',
                 area: ['500px', '600px'],
-                content: 'http://ht.uniteedu.cn/approval/' + id,
+                content: '/approval/' + id,
                 btn: '确定',
                 btnAlign: 'c'
             });
