--- a/application/index/view/approval/all.html
+++ b/application/index/view/approval/all.html
@@ -139,7 +139,7 @@ layui.use(['form', 'table'], function () {
                 type: 2,
                 title: '<span class="icon icon-flow"></span>  审批详情',
                 area: ['500px', '600px'],
-                content: 'http://ht.uniteedu.cn/approval/' + data.id,
+                content: '/approval/' + data.id,
                 btnAlign: 'c',
             });
             layer.full(index);
