--- a/application/index/view/node/approval.html
+++ b/application/index/view/node/approval.html
@@ -74,7 +74,7 @@
                 var index = layer.open({
                     type: 2,
                     area: ['500px', '600px'],
-                    content: 'http://ht.uniteedu.cn/approval/' + data.approval_id,
+                    content: '/approval/' + data.approval_id,
                     btn: '确定',
                     btnAlign: 'c'
                 });
@@ -177,7 +177,7 @@
                 var index = layer.open({
                     type: 2,
                     area: ['500px', '600px'],
-                    content: 'http://ht.uniteedu.cn/approval/' + data.approval_id,
+                    content: '/approval/' + data.approval_id,
                     btn: approvalBtn,
                     btnAlign: 'c',
                     yes: yesFun,
