--- a/application/index/view/type/all.html
+++ b/application/index/view/type/all.html
@@ -54,7 +54,7 @@
                                 layer.msg('操作成功');
                                 console.log(result);
                             }else if (result === 'hasContracts') {
-                                layer.open({title: '警告', content: '当前类别下存在合同，请先删除该类别下的合同，再进行该操作！', icon: 2})
+                                layer.open({title: '警告', content: '当前类型下存在合同，请先删除该类型下的合同，再进行该操作！', icon: 2})
                             } else {
                                 layer.msg('操作失败');
                                 console.log(result);
